# sira

./: .env.example  .gitignore  README.md  conftest.py  requirements.txt  roadmap.md  todo.md
ai_review/: ISSUES.md
checkpoints/: best_model.pth
config/: data.yaml  model.yaml  submission_data.yaml
docs/: constraints.md  developer_takeover.md  problemstatement.md  proposal.md  submission_guidelines.md
models/: sir_model.pth  vector_field_mlp.pth
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_symbolic_discovery.ipynb  04_results_analysis.ipynb
scripts/: _bootstrap.py  deploy_model.py  (+2 more)
submission/source_code/: .env.example  conftest.py  pyproject.toml
submission/source_code/config/: base.yaml  submission_base.yaml  submission_model.yaml
submission/source_code/src/: generate_data.py  symbolic_solver.py
submission/source_code/src/core/: parallel.py
submission/source_code/src/data/: generator.py  preprocessor.py
submission/source_code/src/inference/: predictor.py
submission/source_code/src/inference/api/: schemas.py  server.py
submission/source_code/src/models/architectures/: neural_ode.py
submission/source_code/src/sira/api/: app.py  schemas.py
submission/source_code/src/sira/config/: __init__.py  loader.py
submission/source_code/src/sira/services/: experiment_service.py  training_service.py
submission/source_code/src/sira/utils/: randomness.py
submission/source_code/src/training/: metrics.py
submission/source_code/src/visualization/: dashboard.py
submission/source_code/tests/unit/: test_api.py  test_services.py
(+59 files in other folders)
